tests/__snapshots__/validation-toBeCallableWith-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  19 | describe("argument for 'source'", () => {
  20 |   test("must be provided", () => {
  21 |     expect().type.toBeCallableWith(false);
     |     ~~~~~~
  22 |   });
  23 | 
  24 |   test("must be a callable expression", () => {

       at ./__typetests__/toBeCallableWith.tst.ts:21:5

Error: An argument for 'source' must be a callable expression.

  23 | 
  24 |   test("must be a callable expression", () => {
  25 |     expect("abc").type.toBeCallableWith();
     |            ~~~~~
  26 |     expect(123).type.toBeCallableWith();
  27 |     expect(false).type.toBeCallableWith();
  28 |     expect(undefined).type.toBeCallableWith();

       at ./__typetests__/toBeCallableWith.tst.ts:25:12

Error: An argument for 'source' must be a callable expression.

  24 |   test("must be a callable expression", () => {
  25 |     expect("abc").type.toBeCallableWith();
  26 |     expect(123).type.toBeCallableWith();
     |            ~~~
  27 |     expect(false).type.toBeCallableWith();
  28 |     expect(undefined).type.toBeCallableWith();
  29 |     expect(null).type.toBeCallableWith();

       at ./__typetests__/toBeCallableWith.tst.ts:26:12

Error: An argument for 'source' must be a callable expression.

  25 |     expect("abc").type.toBeCallableWith();
  26 |     expect(123).type.toBeCallableWith();
  27 |     expect(false).type.toBeCallableWith();
     |            ~~~~~
  28 |     expect(undefined).type.toBeCallableWith();
  29 |     expect(null).type.toBeCallableWith();
  30 | 

       at ./__typetests__/toBeCallableWith.tst.ts:27:12

Error: An argument for 'source' must be a callable expression.

  26 |     expect(123).type.toBeCallableWith();
  27 |     expect(false).type.toBeCallableWith();
  28 |     expect(undefined).type.toBeCallableWith();
     |            ~~~~~~~~~
  29 |     expect(null).type.toBeCallableWith();
  30 | 
  31 |     expect(() => undefined).type.toBeCallableWith();

       at ./__typetests__/toBeCallableWith.tst.ts:28:12

Error: An argument for 'source' must be a callable expression.

  27 |     expect(false).type.toBeCallableWith();
  28 |     expect(undefined).type.toBeCallableWith();
  29 |     expect(null).type.toBeCallableWith();
     |            ~~~~
  30 | 
  31 |     expect(() => undefined).type.toBeCallableWith();
  32 |     expect(() => {}).type.toBeCallableWith();

       at ./__typetests__/toBeCallableWith.tst.ts:29:12

Error: An argument for 'source' must be a callable expression.

  33 |     expect(() => () => false).type.toBeCallableWith();
  34 | 
  35 |     expect(getPerson("abc")).type.toBeCallableWith("abc");
     |            ~~~~~~~~~~~~~~~~
  36 | 
  37 |     expect(Person).type.toBeCallableWith("abc");
  38 |   });

       at ./__typetests__/toBeCallableWith.tst.ts:35:12

Error: An argument for 'source' must be a callable expression.

Did you mean to use the '.toBeConstructableWith()' matcher?

  35 |     expect(getPerson("abc")).type.toBeCallableWith("abc");
  36 | 
  37 |     expect(Person).type.toBeCallableWith("abc");
     |            ~~~~~~
  38 |   });
  39 | 
  40 |   test("allowed expressions", () => {

       at ./__typetests__/toBeCallableWith.tst.ts:37:12

Error: An argument for 'source' cannot be of the 'any' type.

The 'any' type was rejected because the 'rejectAnyType' option is enabled.
If this check is necessary, pass 'any' as the type argument explicitly.

  63 | 
  64 |   test("is rejected type?", () => {
  65 |     expect("abc" as any).type.toBeCallableWith();
     |            ~~~~~~~~~~~~
  66 |     expect("abc" as never).type.toBeCallableWith();
  67 |   });
  68 | });

       at ./__typetests__/toBeCallableWith.tst.ts:65:12

Error: An argument for 'source' cannot be of the 'never' type.

The 'never' type was rejected because the 'rejectNeverType' option is enabled.
If this check is necessary, pass 'never' as the type argument explicitly.

  64 |   test("is rejected type?", () => {
  65 |     expect("abc" as any).type.toBeCallableWith();
  66 |     expect("abc" as never).type.toBeCallableWith();
     |            ~~~~~~~~~~~~~~
  67 |   });
  68 | });
  69 | 

       at ./__typetests__/toBeCallableWith.tst.ts:66:12

